# crud-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
src/: lib.rs  main.rs  models.rs
src/components/: mandelbrot.rs  mod.rs  product_form.rs  product_list.rs
src/pages/: home.rs
